force-app/main/default/objects/animalos__Movement__c/animalos__Movement__c.object-meta.xml
<CustomObject>
    <label>Movement</label>
    <nameField>
        <displayFormat>M{00000}</displayFormat>
        <label>Movement ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Movements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>