force-app/main/default/objects/animalos__Movement__c/fields/animalos__Animal__c.field-meta.xml
<CustomField>
    <fullName>animalos__Animal__c</fullName>
    <label>Animal</label>
    <referenceTo>animalos__Animal__c</referenceTo>
    <relationshipLabel>Movements</relationshipLabel>
    <relationshipName>Movements</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>