force-app/main/default/objects/animalos__Movement__c/fields/animalos__Current__c.field-meta.xml
<CustomField>
    <fullName>animalos__Current__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Current</label>
    <type>Checkbox</type>
</CustomField>