force-app/main/default/objects/animalos__Movement__c/fields/animalos__Foster_Reason__c.field-meta.xml
<CustomField>
    <fullName>animalos__Foster_Reason__c</fullName>
    <label>Foster Reason</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Adult to put on Weight</fullName>
                <isActive>false</isActive>
                <label>Adult to put on Weight</label>
            </value>
            <value>
                <fullName>Available for Adoption</fullName>
            </value>
            <value>
                <fullName>Available for Adoption in Foster</fullName>
                <isActive>false</isActive>
                <label>Available for Adoption in Foster</label>
            </value>
            <value>
                <fullName>Awaiting Rescue</fullName>
            </value>
            <value>
                <fullName>Behavioural</fullName>
                <isActive>false</isActive>
                <label>Behavioural</label>
            </value>
            <value>
                <fullName>Declining in Adoption Pens</fullName>
                <isActive>false</isActive>
                <label>Declining in Adoption Pens</label>
            </value>
            <value>
                <fullName>Doggie Day Out</fullName>
                <isActive>false</isActive>
                <label>Doggie Day Out</label>
            </value>
            <value>
                <fullName>FIV Positive</fullName>
            </value>
            <value>
                <fullName>Gastrointestinal</fullName>
            </value>
            <value>
                <fullName>Heartworm Recovery</fullName>
            </value>
            <value>
                <fullName>Kittens - Neonate</fullName>
                <isActive>false</isActive>
                <label>Kittens - Neonate</label>
            </value>
            <value>
                <fullName>Mum and Bubs</fullName>
            </value>
            <value>
                <fullName>Neonate (0-3 weeks)</fullName>
            </value>
            <value>
                <fullName>Non-Infectious Medical treatment / recovery</fullName>
                <isActive>false</isActive>
                <label>Non-Infectious Medical treatment / recovery</label>
            </value>
            <value>
                <fullName>Orthopaedic</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Parvo Recovery</fullName>
                <isActive>false</isActive>
                <label>Parvo Recovery</label>
            </value>
            <value>
                <fullName>Parvo Treatment/Recovery</fullName>
                <isActive>false</isActive>
                <label>Parvo Treatment/Recovery</label>
            </value>
            <value>
                <fullName>Permanent Bequest Animal</fullName>
                <isActive>false</isActive>
                <label>Permanent Bequest Animal</label>
            </value>
            <value>
                <fullName>Pets in Crisis Program</fullName>
            </value>
            <value>
                <fullName>Pillow Paws</fullName>
                <isActive>false</isActive>
                <label>Pillow Paws</label>
            </value>
            <value>
                <fullName>Pregnant</fullName>
                <isActive>false</isActive>
                <label>Pregnant</label>
            </value>
            <value>
                <fullName>Pregnant</fullName>
            </value>
            <value>
                <fullName>Pregnant or Feeding Litter</fullName>
                <isActive>false</isActive>
                <label>Pregnant or Feeding Litter</label>
            </value>
            <value>
                <fullName>Programs Foster</fullName>
                <isActive>false</isActive>
                <label>Programs Foster</label>
            </value>
            <value>
                <fullName>Protective Custody</fullName>
                <isActive>false</isActive>
                <label>Protective Custody</label>
            </value>
            <value>
                <fullName>Protective Custody Cruelty Recovery</fullName>
                <isActive>false</isActive>
                <label>Protective Custody Cruelty Recovery</label>
            </value>
            <value>
                <fullName>Protective Custody Hold</fullName>
            </value>
            <value>
                <fullName>Recovery from Kennel Cough</fullName>
            </value>
            <value>
                <fullName>Recovery Tick Paralysis</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>