force-app/main/default/objects/animalos__Movement__c/fields/animalos__Location__c.field-meta.xml
<CustomField>
    <fullName>animalos__Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Location</label>
    <referenceTo>animalos__Location__c</referenceTo>
    <relationshipLabel>Movements</relationshipLabel>
    <relationshipName>Movements</relationshipName>
    <type>Lookup</type>
</CustomField>