force-app/main/default/objects/animalos__Movement__c/fields/animalos__Movement_Reason__c.field-meta.xml
<CustomField>
    <fullName>animalos__Movement_Reason__c</fullName>
    <label>Movement Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Adopter Available At Another Site</fullName>
            </value>
            <value>
                <fullName>Capacity Constraints At Originating Site</fullName>
            </value>
            <value>
                <fullName>Carer unavailable</fullName>
            </value>
            <value>
                <fullName>Minimal Adoption Interest At Existing Site</fullName>
            </value>
            <value>
                <fullName>New incoming Animal</fullName>
            </value>
            <value>
                <fullName>Not Coping At Facility</fullName>
            </value>
            <value>
                <fullName>Owner To Collect At Another Site</fullName>
            </value>
            <value>
                <fullName>Rehabilitation</fullName>
            </value>
            <value>
                <fullName>Rescue Collection</fullName>
            </value>
            <value>
                <fullName>Returning for adoption</fullName>
            </value>
            <value>
                <fullName>Returning for desex</fullName>
            </value>
            <value>
                <fullName>Returning to owner</fullName>
            </value>
            <value>
                <fullName>Security Reasons</fullName>
            </value>
            <value>
                <fullName>Sick return</fullName>
            </value>
            <value>
                <fullName>Sleep-over foster</fullName>
            </value>
            <value>
                <fullName>Transfer From Petbarn Due To Behaviour</fullName>
            </value>
            <value>
                <fullName>Transfer From Petbarn Due To Medical</fullName>
            </value>
            <value>
                <fullName>Transfer To Petbarn Store</fullName>
            </value>
            <value>
                <fullName>Transfer To Tuggerah</fullName>
            </value>
            <value>
                <fullName>Unsuitable placement</fullName>
            </value>
            <value>
                <fullName>Vet Treatment Required At Vet Hospital Site</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>