force-app/main/default/objects/animalos__Movement__c/fields/animalos__Previous_Location__c.field-meta.xml
<CustomField>
    <fullName>animalos__Previous_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Previous Location</label>
    <referenceTo>animalos__Location__c</referenceTo>
    <relationshipLabel>Previous Movements</relationshipLabel>
    <relationshipName>Previous_Movements</relationshipName>
    <type>Lookup</type>
</CustomField>