force-app/main/default/objects/animalos__Movement__c/fields/animalos__Total_Time_Days__c.field-meta.xml
<CustomField>
    <fullName>animalos__Total_Time_Days__c</fullName>
    <formula>IF(ISBLANK(animalos__End_Date_Time__c),
        TODAY() - DATEVALUE(animalos__Start_Date_Time__c),
        IF(OR(DATEVALUE(animalos__End_Date_Time__c) = DATEVALUE(animalos__Start_Date_Time__c), DATEVALUE(animalos__Start_Date_Time__c) = TODAY()), 1,
        DATEVALUE(animalos__End_Date_Time__c) - DATEVALUE(animalos__Start_Date_Time__c)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Time (Days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>