force-app/main/default/objects/animalos__Movement__c/fields/animalos__Type__c.field-meta.xml
<CustomField>
    <fullName>animalos__Type__c</fullName>
    <formula>CASE(animalos__Location__r.RecordType.DeveloperName, &apos;Foster&apos;, &apos;Foster&apos;, &apos;Offsite&apos;, &apos;Offsite&apos;, &apos;House&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Type</label>
    <type>Text</type>
</CustomField>