force-app/main/default/objects/animalos__Movement__c/fields/aos_Foster_Reason_Legacy__c.field-meta.xml
<CustomField>
    <fullName>aos_Foster_Reason_Legacy__c</fullName>
    <description>Legacy value from Sheltermate migrated records</description>
    <label>Foster Reason Legacy</label>
    <length>255</length>
    <type>Text</type>
</CustomField>