force-app/main/default/objects/animalos__Movement__c/fields/aos_Full_Location__c.field-meta.xml
<CustomField>
    <fullName>aos_Full_Location__c</fullName>
    <formula>animalos__Location__r.animalos__Full_Location_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Full Location</label>
    <type>Text</type>
</CustomField>