force-app/main/default/objects/animalos__Movement__c/listViews/animalos__All.listView-meta.xml
<ListView>
    <fullName>animalos__All</fullName>
    <columns>NAME</columns>
    <columns>animalos__Current__c</columns>
    <columns>animalos__Location__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>